--- a/src/AppBundle/Resources/views/SecurityController/register.html.twig
+++ b/src/AppBundle/Resources/views/SecurityController/register.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     {{ form_start(form) }}
+    {{ form_row(form.username) }}
     {{ form_row(form.name) }}
     {{ form_row(form.surname) }}
     {{ form_row(form.email) }}
