--- a/src/AppBundle/Resources/views/SecurityController/editUser.html.twig
+++ b/src/AppBundle/Resources/views/SecurityController/editUser.html.twig
@@ -6,7 +6,7 @@
     {{ form_start(form) }}
     {{ form_row(form.name) }}
     {{ form_row(form.surname) }}
-    {{ form_row(form_password) }}
+    {{ form_row(form.password) }}
     <button type="submit">Update!</button>
     {{ form_end(form) }}
 {% endblock %}
