added facebook login feature(!!! facebook object has no email !!!) + edited page accessibility depending on user permissions and etc.

--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -8,18 +8,14 @@
     {% endif %}
 
     <form action="{{ path('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="_username" value="{{ last_email }}" />
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password" />
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-
         <button type="submit">login</button>
     </form>
+
+    <a href="{{ path('fbConnect') }}">Login with Facebook</a>
 {% endblock %}
