--- a/src/AppBundle/Resources/views/Home/test.html.twig
+++ b/src/AppBundle/Resources/views/Home/test.html.twig
@@ -5,7 +5,7 @@
         {% for group in questionGroup %}
              {% for question in group %}
                  <li>
-                 <div>
+                 <div class="">
                      {{ loop.index }}{{ question.content|raw }}
                  </div>
                  <div>
