--- a/src/Eimantas/SandboxBundle/Resources/views/show.html.twig
+++ b/src/Eimantas/SandboxBundle/Resources/views/show.html.twig
@@ -4,6 +4,7 @@
 {% block title %}SandboxBundle:Show:showInfo{% endblock %}
 
 {% block body %}
-<h1>Bike</h1>
-{{ bike.frame }}
+<h1>Discovery space shuttle</h1>
+{{ discovery.engine }}
+{{ discovery.crew }}
 {% endblock %}
