--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -8,8 +8,8 @@
     {% endif %}
 
     <form action="{{ path('login') }}" method="post">
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="_username" value="{{ last_email }}" />
+        <label for="email">Username:</label>
+        <input type="text" id="email" name="_username" value="{{ last_username }}" />
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password" />
