started working on test sessions

--- a/src/AppBundle/Resources/views/Home/test.html.twig
+++ b/src/AppBundle/Resources/views/Home/test.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <ul>
-        {% for group in questionGroup %}
+        {% for group in questionGroups %}
              {% for question in group %}
                  <li>
                  <div>
