--- a/src/AppBundle/Resources/views/Home/question.html.twig
+++ b/src/AppBundle/Resources/views/Home/question.html.twig
@@ -1,8 +1,15 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
+    {% for group in session %}
+        <b>{{ loop.index }}</b>
+            {% for question in group %}
+                <button title="{{ question.title }}">{{ loop.index }}</button>
+            {% endfor %}<br>
+        {% endfor %}
     {{ form_start(form) }}
-    {{ form_row(form.answers) }}
+    {{ form_label(form.answers) }}
+    {{ form_widget(form.answers) }}
     <input type="submit" value="Next">
     {{ form_end(form) }}
 {% endblock %}
