--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,16 +2,19 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>{% block title %}{{ "My project" }}{% endblock %}</title>
+    <title>{% block title %}{{ "PHP testai" }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon.ico')}}">
     {% block stylesheets %}
+        <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" />
         <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     {% block container %}
         {% block header %}
             {% include "::inc/header.html.twig" %}
