--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -1,6 +1,46 @@
+.imageBackground {
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../images/seigaiha.png");
+}
+
+.whiteBackground {
+  background-color: whitesmoke;
+}
+
+.greyBackground {
+  background-color: lightgrey;
+}
+
 .titleN {
   margin: 20px auto;
   text-align: center;
-  font-size: 96px;
+  font-size: 46px;
+  font-family: 'Century Gothic, sans-serif';
+}
+
+.bungeeS {
+  font-family: 'Bungee Hairline', cursive;
+  font-size: 40px;
+}
+
+.latoS {
   font-family: 'Lato';
+  font-weight: bold;
+}
+
+.footer {
+  position: static;
+  text-align: right;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #f5f5f5;
+}
+
+.allignCenter{
+  padding: 20px;
+  text-align: center;
+  vertical-align: middle;
 }
