--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -24,14 +24,20 @@
 
             <div class="row bungeeS">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                    <a href="#" class="buttonB  rounded">Zend testas</a>
+                    <a href="/" class="buttonB  rounded">Zend testas</a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                    <a href="#" class="buttonB  rounded">Bendras <br> žinių testas</a>
+                    <a href="/" class="buttonB  rounded">
+                        Bendrasis <br>
+                        <div class="font-20">žinių testas</div>
+                    </a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                    <a href="#" class="buttonB  rounded">Temos testas</a>
+                    <a class="buttonB  rounded" id="buttonCustom">Temos testas</a>
                 </div>
+            </div>
+            <div id="categoryForm">
+                Lasgasgasfa
             </div>
         </div>
     </div>
