--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -1,3 +1,7 @@
+.container-fluid{
+  min-width: 360px;
+}
+
 .imageBackground {
   height: 100%;
   background-repeat: no-repeat;
@@ -13,6 +17,15 @@
   background-color: lightgrey;
 }
 
+.footer {
+  position: static;
+  text-align: right;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #f5f5f5;
+}
+
 .titleN {
   margin: 20px auto;
   text-align: center;
@@ -25,18 +38,13 @@
   font-size: 40px;
 }
 
+.font-20 {
+  font-size: 20px;
+}
+
 .latoS {
   font-family: 'Lato';
   font-weight: bold;
-}
-
-.footer {
-  position: static;
-  text-align: right;
-  bottom: 0;
-  width: 100%;
-  height: 30px;
-  background-color: #f5f5f5;
 }
 
 .allignCenter{
