--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -1,3 +1,15 @@
+body {
+  height: 100%;
+  margin: 0;
+}
+html {
+  padding-bottom: 50px;
+  min-height: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  position: relative;
+}
+
 .container-fluid{
   min-width: 360px;
 }
@@ -18,7 +30,7 @@
 }
 
 .footer {
-  position: static;
+  position: absolute;
   text-align: right;
   bottom: 0;
   width: 100%;
