--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -24,16 +24,16 @@
 
             <div class="row bungeeS">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                    <a href="/" class="buttonB  rounded">Zend testas</a>
+                    <a href="/" class="buttonB rounded">Zend testas</a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                    <a href="/" class="buttonB  rounded">
+                    <a href="/" class="buttonB rounded">
                         Bendrasis <br>
                         <div class="font-20">žinių testas</div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 allignCenter">
-                    <a class="buttonB  rounded" id="buttonCustom">Temos testas</a>
+                    <a class="buttonB rounded" name="buttonCustom">Temos testas</a>
                 </div>
             </div>
             <div id="categoryForm">
@@ -57,9 +57,9 @@
     </div>
 
     <div class="container">
-        <a href="#" class="button blue big">Download</a>
-        <a href="#" class="button blue medium">Submit</a>
-        <a href="#" class="button small blue rounded">Submit</a>
+        <a href="#" class="buttonB blue big">Download</a>
+        <a href="#" class="buttonB blue medium">Submit</a>
+        <a href="#" class="buttonB small blue rounded">Submit</a>
         <h1>Progress Buttons</h1>
 
         <a id="submitButton" href="{{ path('login') }}" class="progress-button">Submit</a>
@@ -80,36 +80,8 @@
         </div>
 
 
-
-
-        <style type='text/css'>
-            @-webkit-keyframes rotate {
-                from {
-                    -webkit-transform: rotate(0deg);
-                }
-                to {
-                    -webkit-transform: rotate(360deg);
-                }
-            }
-            #loading {
-                border: 1px solid #000;
-                border-right: 0;
-                border-bottom: 0;
-                -webkit-border-radius: 100px;
-                height: 100px;
-                width: 100px;
-                margin: 100px;
-                -webkit-transition: all 0.5s ease-in;
-                -webkit-animation-name:             rotate;
-                -webkit-animation-duration:         3.0s;
-                -webkit-animation-iteration-count:  infinite;
-                -webkit-animation-timing-function: linear;
-            }
-        </style>
-
         <div id="loading"></div>
 
-        <div><p>Labas</p></div>
         <H1>Lorem</H1>
         <H1>Lorem</H1>
         <H1>Lorem</H1>
