--- a/src/AppBundle/Resources/style/_progressButton.scss
+++ b/src/AppBundle/Resources/style/_progressButton.scss
@@ -11,7 +11,7 @@
   box-shadow:0 1px 1px #ccc;
   border-radius:2px;
 
-  background-color: #51b7e6;
+  background-color: deepskyblue;
   background-image:-webkit-linear-gradient(top, #51b7e6, #4dafdd);
   background-image:-moz-linear-gradient(top, #51b7e6, #4dafdd);
   background-image:linear-gradient(top, #51b7e6, #4dafdd);
@@ -54,7 +54,7 @@
 /* The colorful bar that grows depending on the progress */
 
 .progress-button .tz-bar{
-  background-color:#e667c0;
+  background-color: lightpink;
   height:3px;
   bottom:0;
   left:0;
