--- a/src/AppBundle/Resources/style/_loading.scss
+++ b/src/AppBundle/Resources/style/_loading.scss
@@ -7,13 +7,14 @@
   }
 }
 #loading {
+  display: inline-block;
   border: 1px solid #000;
   border-right: 0;
   border-bottom: 0;
-  -webkit-border-radius: 100px;
-  height: 100px;
-  width: 100px;
-  margin: 100px;
+  -webkit-border-radius: 20px;
+  height: 20px;
+  width: 20px;
+  margin: 0px;
   -webkit-transition: all 0.5s ease-in;
   -webkit-animation-name:             rotate;
   -webkit-animation-duration:         3.0s;
