--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -10,9 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand latoS" href="/">
-                    {% image 'bundles/app/dist/php.png' %}
-                        <img src="{{ asset_url }} " alt="Logo" width="50px" align="left"/> &nbsp PHP testai
-                    {% endimage %}
+                    <img src="{{ asset('images/php.png') }}" alt="Logo!" width="50px" align="left"/> &nbsp PHP testai
                 </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
