--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -31,7 +31,7 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ path('login') }}">Prisijungti</a></li>
+                    <li><a id="loginButton">Prisijungti</a></li>
                     <li><a href="{{ path('register') }}">Registruotis</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
