--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -18,9 +18,65 @@
         </div>
     {% endfor %}
 
+    <!--login register forms-->
+    <div class="container allign-center">
+        <div class="row">
 
+             <div class="col-lg-4 col-lg-offset-1 col-sm-12" id="loginForm">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        Log in
+                    </div>
+                    <div class="panel-body">
+                        <form action="{{ path('login') }}" method="post" class="form-horizontal">
+                            <fieldset class="form-group">
+                                <label class="control-label label-width" for="email">Email: </label>
+                                <input type="text" id="email" name="_username" value="{{ last_email }}" />
+                            </fieldset>
+                            <fieldset class="form-group">
+                                <label class="control-label label-width" for="password">Password: </label>
+                                <input type="password" id="password" name="_password" />
+                            </fieldset>
+                            <button class="btn btn-lg btn-block btn-success" type="submit">Log in</button>
+                        </form>
 
-    <div class="greyBackground">
+                    </div>
+                    <div class="panel-footer">
+                        <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-lg-offset-1 col-sm-12" id="registerForm">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        Log in
+                    </div>
+                    <div class="panel-body">
+                        <form action="{{ path('login') }}" method="post" class="form-horizontal">
+                            <fieldset class="form-group">
+                                <label class="control-label label-width" for="email">Email: </label>
+                                <input type="text" id="email" name="_username" value="{{ last_email }}" />
+                            </fieldset>
+                            <fieldset class="form-group">
+                                <label class="control-label label-width" for="password">Password: </label>
+                                <input type="password" id="password" name="_password" />
+                            </fieldset>
+                            <button class="btn btn-lg btn-block btn-success" type="submit">Log in</button>
+                        </form>
+
+                    </div>
+                    <div class="panel-footer">
+                        <div class="text-center"><b><a href="{{ path('fbConnect') }}">Login with Facebook</a></b></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--primary content test buttons-->
+    <div class="grey-background">
         <div class="container">
             <div class="titleN">PHP žinių įvertinimo testas</div>
 
@@ -42,25 +98,17 @@
             <div id="formCategories" class="allignCenter">
                 <div class="panel-group">
                     <div class="panel panel-primary">
-                        <div class="panel-heading">Testų kategorijos</div>
+                        <div class="panel-heading"><p class="titleN">Testų kategorijos</p></div>
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                     <a href="/login"><button type="submit" class="btn btnY">String</button></a>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                     <a href="/login"><button type="submit" class="btn btnY">PHP</button></a>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                     <a href="/login"><button type="submit" class="btn btnY">Basic</button></a>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                     <a href="/login"><button type="submit" class="btn btnY">String</button></a>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                     <a href="/login"><button type="submit" class="btn btnY">String</button></a>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                     <a href="/login"><button type="submit" class="btn btnY">String</button></a>
                                 </div>
                             </div>
@@ -72,43 +120,62 @@
         </div>
     </div>
 
-    <div class="whiteBackground">
+    <!--secondary content test info-->
+    <div class="sand-background">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2 class="bungeeS boldS font-20">Prisijunk mūsų jau virš</h2>
+                    <h2 class="bungeeS boldS font-20 allignCenter">Prisijunk mūsų jau virš</h2>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2 class="bungeeS boldS font-20">Prisijunk mūsų jau virš</h2>
+                    <h2 class="bungeeS boldS font-20 allignCenter">Prisijunk mūsų jau virš</h2>
                 </div>
             </div>
         </div>
     </div>
 
+
+
+
+
+
+
+
+
+
     <div class="container">
-        <h1>Progress Buttons</h1>
-
-        <a id="submitButton" href="{{ path('login') }}" class="progress-button">Submit</a>
-
-        <a id="actionButton" href="{{ path('login') }}" class="progress-button green" data-loading="Working.." data-finished="Finished!" data-type="background-bar">Action!</a>
-
-        <a id="generateButton" href="{{ path('login') }}" class="progress-button red" data-loading="Generating.." data-finished="Download" data-type="background-vertical">Generate</a>
-
-        <h1>Progress Control</h1>
-
-        <a id="controlButton" href="{{ path('login') }}" class="progress-button">Start</a>
-
-        <div class="control-area">
-            <a class="command increment">Increment</a>
-            <a class="command set-to-1">Set to 1%</a>
-            <a class="command set-to-50">Set to 50%</a>
-            <a class="command finish">Finish</a>
-        </div>
 
         <!--testo timeris-->
         <div class="font-20">
             <div id="loading" class=""></div>
             <div id="hours">00</div><span>:</span><div id="minutes">00</div><span>:</span><div id="seconds">00</div>
+        </div>
+
+        <div class="row">
+            <!--test junk-->
+
+            <div class="col-lg-6 col-sm-12">
+                <h1>Progress Buttons</h1>
+
+                <a id="submitButton" href="{{ path('login') }}" class="progress-button">Submit</a>
+
+                <a id="actionButton" href="{{ path('login') }}" class="progress-button green" data-loading="Working.." data-finished="Finished!" data-type="background-bar">Action!</a>
+
+                <a id="generateButton" href="{{ path('login') }}" class="progress-button red" data-loading="Generating.." data-finished="Download" data-type="background-vertical">Generate</a>
+            </div>
+
+            <div class="col-lg-6 col-sm-12">
+                <h1>Progress Control</h1>
+
+                <a id="controlButton" href="{{ path('login') }}" class="progress-button">Start</a>
+
+                <div class="control-area">
+                    <a class="command increment">Increment</a>
+                    <a class="command set-to-1">Set to 1%</a>
+                    <a class="command set-to-50">Set to 50%</a>
+                    <a class="command finish">Finish</a>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
